--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -77,6 +77,15 @@
   justify-content: space-around;
 }
 
+.reservation-card {
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 40px;
+  padding: 30px;
+  margin: 2%;
+  background-color: #D3EDF7;
+  font-size: 22px;
+  text-align: center;
+}
 
 // index
 
