last-reservation changes and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,10 @@
   </head>
 
   <body>
-
     <%= render "shared/navbar" %>
-    <%= yield %>
+    <div class="content">
+      <%= yield %>
+    </div>
     <%= render "shared/footer" %>
 
   </body>
