--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,8 +6,6 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  // position: fixed;
-  // bottom: 0;
   width: 100%;
 }
 .footer-links {
@@ -23,4 +21,8 @@
 }
 .footer-links a:hover {
   opacity: 1;
+}
+
+.content {
+  min-height: calc(100vh - 170px);
 }
