--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,7 @@
 <% if current_user == @user %>
 
   <div class="container">
-    <span class="titles">Mes réservations en attente</span>
+    <span class="titles">Réservations de mes grannies</span>
 
     <div class="">
 
